--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@ h1,h2,h3,h4,h5,h6 {
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#works" class="w3-bar-item w3-button">How It Works</a>
       <a href="#github" class="w3-bar-item w3-button">GitHub</a>
-     <a href="/routes/index.js" class="w3-bar-item w3-button">Search</a>
+     <a href="/index" class="w3-bar-item w3-button">Try It</a>
     </div>
   </div>
 </div>
@@ -49,6 +49,8 @@ h1,h2,h3,h4,h5,h6 {
       <h5 class="w3-center">A Passion for Food & Cooking</h5>
       <p class="w3-large">We were inspired to create this as part of a project for our CST438 class. It is brought to you by Brian, Ryan, Monique, & Kristine. Among our many brilliant ideas, we felt strongest about this one. <b>Who doesn't love food?!</b> We were motivated by our passion for food, and know that users would also enjoy this idea. The way they will get to search for recipes, and eventually through the use of an image, is different from other websites. We want the users to feel just as excited about food and cooking as we are.</p>
      </br>
+     
+      <h5 class="w3-center">Overall Goals</h5>
       <p class="w3-large w3-text-grey w3-hide-medium">The goal was to deliver an application that could search for recipes based off of an image as well as a manually typed searches. The app can allow users to use their own photos of food to find recipes for that particular dish. Users will be able to find real, trusted recipes that are pulled from a Recipe Search API. Once users have found their recipes, they can choose to save the recipes that they have found. The other goal was to deliver a system in which users must log in with Facebook in order to use our application. </p>
     </div>
   </div>
